<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgIkhsan"
        android:layout_width="156dp"
        android:layout_marginTop="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_height="153dp"
        android:src="@drawable/ikhsan"/>

    <RelativeLayout
        android:id="@+id/layoutBody"
        android:background="@color/cardview_light_background"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imgIkhsan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNama"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSubTitle"
            android:text="@string/txtNama"/>
        <TextView
            android:id="@+id/Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_below="@+id/txtNama"
            android:layout_marginLeft="80dp"
            android:textColor="@color/colorBlack"
            android:text="@string/nama"/>

        <View
            android:id="@+id/line1"
            android:layout_below="@+id/Nama"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:background="#bbb"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_below="@+id/line1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSubTitle"
            android:text="@string/txtEmail"/>
        <TextView
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEmail"
            android:textSize="26sp"
            android:layout_marginLeft="80dp"
            android:textColor="@color/colorBlack"
            android:text="@string/Email"/>
        <View
            android:id="@+id/line2"
            android:layout_below="@+id/Email"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:background="#bbb"/>
        <TextView
            android:id="@+id/txtNoHP"
            android:layout_below="@+id/line2"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSubTitle"
            android:text="@string/txtNo_hp"/>
        <TextView
            android:id="@+id/NoHP"
            android:layout_below="@id/txtNoHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginLeft="80dp"
            android:textColor="@color/colorBlack"
            android:text="@string/NoHP"/>
        <View
            android:id="@+id/line3"
            android:layout_below="@+id/NoHP"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:background="#bbb"/>
        <TextView
            android:id="@+id/txtIG"
            android:layout_below="@id/line3"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSubTitle"
            android:text="@string/txtIg"/>
        <TextView
            android:id="@+id/IG"
            android:layout_below="@id/txtIG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginLeft="80dp"
            android:textColor="@color/colorBlack"
            android:text="@string/IG"/>
        <View
            android:id="@+id/line4"
            android:layout_below="@+id/IG"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_centerHorizontal="true"
            android:background="#bbb"/>
    </RelativeLayout>
</RelativeLayout>